temp/logs/project.log
18-03-2024 09:57:56 - log: Load engine in C:\ProgramData\cocos\editors\Creator\3.8.2\resources\resources\3d\engine
18-03-2024 09:57:58 - log: Profile changed: engine (modules.includeModules: 2d,animation,audio,base,dragon-bones,gfx-webgl,gfx-webgl2,intersection-2d,particle-2d,physics-2d-box2d,profiler,spine,tiled-map,tween,ui,video,webview)
18-03-2024 09:57:58 - log: Register native engine in C:\ProgramData\cocos\editors\Creator\3.8.2\resources\resources\3d\engine\native
18-03-2024 09:58:40 - log: [Scene] meshopt wasm decoder initialized
18-03-2024 09:58:40 - log: [Scene] [box2d]:box2d wasm lib loaded.
18-03-2024 09:58:40 - log: [Scene] [bullet]:bullet wasm lib loaded.
18-03-2024 09:58:41 - log: [Scene] [PHYSICS]: using builtin.
18-03-2024 09:58:41 - log: [Scene] Cocos Creator v3.8.2
18-03-2024 09:58:41 - info: [Scene] Forward render pipeline initialized.
18-03-2024 09:58:42 - log: [Scene] [PHYSICS2D]: switch from box2d-wasm to box2d.
18-03-2024 15:05:30 - error: [Scene] {hidden(::SceneExecutorImportExceptionHandler::)} Error: SyntaxError: C:Program Files (x86)CocosDashboardile:C:UsersdekelAppassetsScriptsackBtn.ts: Unexpected token (9:4)

   7 |     this.node.on(Node.EventType.MOUSE_DOWN, () => {
   8 |       this.node.parent.getChildByName("apple_game").getChildByName("game").
>  9 |     });
     |     ^
  10 |   }
  11 |
  12 |   update(deltaTime: number) {}
    at Object.execute (file:///C:/Users/dekel/App/temp/programming/packer-driver/targets/editor/chunks/0d/data:text/javascript,%0A%2F%2F%20This%20module%20is%20auto-generated%20to%20report%20error%20emitted%20when%20try%20to%20load%20module%20file%3A%2F%2F%2FC%3A%2FUsers%2Fdekel%2FApp%2Fassets%2FScripts%2FbackBtn.ts%20at%20runtime.%0Athrow%20new%20Error(%60SyntaxError%3A%20C%3A%5CProgram%20Files%20(x86)%5CCocosDashboard%5Cfile%3A%5CC%3A%5CUsers%5Cdekel%5CApp%5Cassets%5CScripts%5CbackBtn.ts%3A%20Unexpected%20token%20(9%3A4)%0A%0A%20%20%207%20%7C%20%20%20%20%20this.node.on(Node.EventType.MOUSE_DOWN%2C%20()%20%3D%3E%20%7B%0A%20%20%208%20%7C%20%20%20%20%20%20%20this.node.parent.getChildByName(%22apple_game%22).getChildByName(%22game%22).%0A%3E%20%209%20%7C%20%20%20%20%20%7D)%3B%0A%20%20%20%20%20%7C%20%20%20%20%20%5E%0A%20%2010%20%7C%20%20%20%7D%0A%20%2011%20%7C%0A%20%2012%20%7C%20%20%20update(deltaTime%3A%20number)%20%7B%7D%60)%3B%0A%20%20%20%20%20%20%20%20:3:7)
    at doExec (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:517:30)
    at postOrderExec (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:508:21)
    at C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:440:12
    at file:///C:/Users/dekel/App/temp/programming/packer-driver/targets/editor/chunks/6d/cce:/internal/x/prerequisite-imports:8:13
    at Object.execute (file:///C:/Users/dekel/App/temp/programming/packer-driver/targets/editor/chunks/6d/cce:/internal/x/prerequisite-imports:4:1)
    at Executor._importPrerequisiteModules (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\src\executor\index.ts:311:13)
    at Executor.reload (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\src\executor\index.ts:194:13)
    at GlobalEnv.record (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\builtin\scene\dist\script\3d\manager\scripts.ccc:1:1843)Error: [Scene] {hidden(::SceneExecutorImportExceptionHandler::)} Error: SyntaxError: C:Program Files (x86)CocosDashboardile:C:UsersdekelAppassetsScriptsackBtn.ts: Unexpected token (9:4)

   7 |     this.node.on(Node.EventType.MOUSE_DOWN, () => {
   8 |       this.node.parent.getChildByName("apple_game").getChildByName("game").
>  9 |     });
  12 |   update(deltaTime: number) {}
    at Object.execute (file:///C:/Users/dekel/App/temp/programming/packer-driver/targets/editor/chunks/0d/data:text/javascript,%0A%2F%2F%20This%20module%20is%20auto-generated%20to%20report%20error%20emitted%20when%20try%20to%20load%20module%20file%3A%2F%2F%2FC%3A%2FUsers%2Fdekel%2FApp%2Fassets%2FScripts%2FbackBtn.ts%20at%20runtime.%0Athrow%20new%20Error(%60SyntaxError%3A%20C%3A%5CProgram%20Files%20(x86)%5CCocosDashboard%5Cfile%3A%5CC%3A%5CUsers%5Cdekel%5CApp%5Cassets%5CScripts%5CbackBtn.ts%3A%20Unexpected%20token%20(9%3A4)%0A%0A%20%20%207%20%7C%20%20%20%20%20this.node.on(Node.EventType.MOUSE_DOWN%2C%20()%20%3D%3E%20%7B%0A%20%20%208%20%7C%20%20%20%20%20%20%20this.node.parent.getChildByName(%22apple_game%22).getChildByName(%22game%22).%0A%3E%20%209%20%7C%20%20%20%20%20%7D)%3B%0A%20%20%20%20%20%7C%20%20%20%20%20%5E%0A%20%2010%20%7C%20%20%20%7D%0A%20%2011%20%7C%0A%20%2012%20%7C%20%20%20update(deltaTime%3A%20number)%20%7B%7D%60)%3B%0A%20%20%20%20%20%20%20%20:3:7)
    at doExec (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:517:30)
    at postOrderExec (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:508:21)
    at C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:440:12
    at file:///C:/Users/dekel/App/temp/programming/packer-driver/targets/editor/chunks/6d/cce:/internal/x/prerequisite-imports:8:13
    at Object.execute (file:///C:/Users/dekel/App/temp/programming/packer-driver/targets/editor/chunks/6d/cce:/internal/x/prerequisite-imports:4:1)
    at Executor._importPrerequisiteModules (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\src\executor\index.ts:311:13)
    at Executor.reload (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\src\executor\index.ts:194:13)
    at GlobalEnv.record (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\builtin\scene\dist\script\3d\manager\scripts.ccc:1:1843)
    at Logger._logHandler (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\builtin\scene\dist\script\3d\manager\startup\log.ccc:1:492)
    at Logger.record (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@base\electron-logger\lib\renderer.ccc:1:458)
    at console.error (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@base\electron-logger\lib\renderer.ccc:1:1414)
    at ScriptManager._handleImportException (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\builtin\scene\dist\script\3d\manager\scripts.ccc:1:5358)
    at Executor.importExceptionHandler [as _importExceptionHandler] (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\builtin\scene\dist\script\3d\manager\scripts.ccc:1:3452)
    at Executor._onModuleLoaded (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\src\executor\index.ts:359:22)
    at SystemJS.onload (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\src\executor\index.ts:87:18)
    at triggerOnload (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:270:10)
    at doExec (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:538:7)
    at postOrderExec (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\node_modules\@editor\lib-programming\static\executor\systemjs-bridge\out\index.js:508:21)
18-03-2024 15:05:30 - warn: [Scene] Missing class: cf1cakFiEVFtqNz2q0UfB5bError: [Scene] Missing class: cf1cakFiEVFtqNz2q0UfB5b
    at Object.classFinder (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\builtin\engine\dist\editor-extends\missing-reporter\missing-class-reporter.ccc:1:2381)
    at _Deserializer.classFinder [as _classFinder] (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\resources\3d\engine\bin\.cache\dev\editor\bundled\index.js:106979:34)
    at _Deserializer._deserializeTypeTaggedObject (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\resources\3d\engine\bin\.cache\dev\editor\bundled\index.js:46654:30)
    at _Deserializer._deserializeObject (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\resources\3d\engine\bin\.cache\dev\editor\bundled\index.js:46608:29)
    at _Deserializer._deserializeAndAssignField (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\resources\3d\engine\bin\.cache\dev\editor\bundled\index.js:46775:38)
    at _Deserializer._deserializeArray (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\resources\3d\engine\bin\.cache\dev\editor\bundled\index.js:46636:40)
    at _Deserializer._deserializeObject (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\resources\3d\engine\bin\.cache\dev\editor\bundled\index.js:46614:29)
18-03-2024 15:05:33 - error: [Scene] Script "cf1cakFiEVFtqNz2q0UfB5b" attached to "back" is missing or invalid. Detailed information:
Node path: "Canvas/white_bg/back"
Script UUID: "cf1ca905-8845-45b6-a373-daad147c1e5b"
Class ID: "cf1cakFiEVFtqNz2q0UfB5b"
Error: [Scene] Script "cf1cakFiEVFtqNz2q0UfB5b" attached to "back" is missing or invalid. Detailed information:
Node path: "Canvas/white_bg/back"
Script UUID: "cf1ca905-8845-45b6-a373-daad147c1e5b"
Class ID: "cf1cakFiEVFtqNz2q0UfB5b"

    at report (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\builtin\engine\dist\editor-extends\missing-reporter\missing-class-reporter.ccc:1:1393)
    at reportByWalker (C:\ProgramData\cocos\editors\Creator\3.8.2\resources\app.asar\builtin\engine\dist\editor-extends\missing-reporter\missing-class-reporter.ccc:1:1606)
